# po2dataset

./: .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini  tox.toml
.github/workflows/: dependabot.yml  python-publish.yml  python-test.yml  semantic-release.yml
po2dataset/: po2dataset.py
tests/: test_general.py
tests/data/: test_data.po
