[project]
name = "po2dataset"
version = "0.1.0-beta"
authors = [
  {name = "Urtzi Odriozola", email = "urtzi.odriozola@gmail.com"},
]
description = "Python tool to extract sentences from po files and create language datasets for NLP machine learning"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["po", "dataset", "NLP", "argostranslate", "libretranslate", "language", "translation"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/urtzai/po2dataset"
Documentation = "https://github.com/urtzai/po2dataset/blob/main/README.md"
Repository = "https://github.com/urtzai/po2dataset"
"Bug Tracker" = "https://github.com/urtzai/po2dataset/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
